#
# Makefile.am
#
# Copyright (C) 2007-2008, David Beckett http://www.dajobe.org/
# 
# This file is licensed under the following three licenses as alternatives:
#   1. GNU Lesser General Public License (LGPL) V2.1 or any newer version
#   2. GNU General Public License (GPL) V2 or any newer version
#   3. Apache License, V2.0 or any newer version
# 
# You may not use this file except in compliance with at least one of
# the above three licenses.
# 
# See LICENSE.html or LICENSE.txt at the top of this package for the
# complete terms and further detail along with the license texts for
# the licenses in COPYING.LIB, COPYING and LICENSE-2.0.txt respectively.

lib_LTLIBRARIES = libflickcurl.la

include_HEADERS = flickcurl.h

libflickcurl_la_SOURCES = \
activity.c \
args.c \
blog.c \
category.c \
common.c \
comments.c \
contacts.c \
context.c \
config.c \
exif.c \
group.c \
md5.c \
location.c \
method.c \
person.c \
photo.c \
photoset.c \
place.c \
size.c \
ticket.c \
user_upload_status.c \
tags.c \
video.c \
vsnprintf.c \
activity-api.c \
auth-api.c \
blogs-api.c \
contacts-api.c \
favorites-api.c \
interestingness-api.c \
groups-api.c \
groups-pools-api.c \
people-api.c \
perms.c \
photos-api.c \
photos-comments-api.c \
photos-geo-api.c \
photos-licenses-api.c \
photos-notes-api.c \
photos-transform-api.c \
photos-upload-api.c \
photosets-api.c \
photosets-comments-api.c \
places-api.c \
prefs-api.c \
reflection-api.c \
tags-api.c \
test-api.c \
upload-api.c \
urls-api.c \
flickcurl_internal.h
